--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Mirrored from hackclub.com/camp/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 12 Nov 2019 11:34:24 GMT -->
-<!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-
 <head>
     <meta charSet="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -327,7 +323,7 @@ analytics.load("35oTlU4UqlhIN8VGYmBxAzyDdfzhcscw");
             }
             </style>
             <div class="Landing__Screen-fubg63-0 PZDUG sc-eNQAEJ hgCrxp sc-bdVaJa HrKyW">
-                <div class="react-reveal">
+                <div>
                     <div class="Landing__Content-fubg63-1 ikHLhb sc-TOsTZ bTejNJ sc-cHGsZl cvvxGf sc-kGXeez gQvGaC sc-bdVaJa ddjXnT">
                         <h1 class="Content__ColoredTitle-sc-1i9wzzn-4 ixdRar Content__Title-sc-1i9wzzn-0 jgJNPM sc-brqgnP SqPLV sc-jWBwVP hjaREi" font-size="7,8,9">Hack Camp</h1>
                         <p class="Content__Lead-sc-1i9wzzn-6 xDrkf sc-hqyNC hqxeGs sc-dnqmqq itxSpU">A 1-week summer camp<br />to get started coding.</p>
@@ -732,6 +728,4 @@ analytics.load("35oTlU4UqlhIN8VGYmBxAzyDdfzhcscw");
     <script src="app-3dfab7f2f18cf53efceb.js" async=""></script>
     <script src="component---src-pages-camp-index-js-7d4ba37d2c4b6b29c6f8.js" async=""></script>
 </body>
-<!-- Mirrored from hackclub.com/camp/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 12 Nov 2019 11:34:43 GMT -->
-
 </html>
